# api/rest/oas_operations_gen.go
@@ -9,17 +9,24 @@ const (
 	ActOnThreadOperation           OperationName = "ActOnThread"
 	AddPeerOperation               OperationName = "AddPeer"
 	ApproveRequestOperation        OperationName = "ApproveRequest"
+	CreateWebhookOperation         OperationName = "CreateWebhook"
+	DeleteWebhookOperation         OperationName = "DeleteWebhook"
 	DeliverEventOperation          OperationName = "DeliverEvent"
 	DenyRequestOperation           OperationName = "DenyRequest"
 	GetHealthOperation             OperationName = "GetHealth"
 	GetMeOperation                 OperationName = "GetMe"
 	GetPeerOperation               OperationName = "GetPeer"
 	GetThreadOperation             OperationName = "GetThread"
+	GetWebhookOperation            OperationName = "GetWebhook"
 	ListPeersOperation             OperationName = "ListPeers"
 	ListRequestsOperation          OperationName = "ListRequests"
 	ListThreadsOperation           OperationName = "ListThreads"
+	ListWebhookDeliveriesOperation OperationName = "ListWebhookDeliveries"
+	ListWebhooksOperation          OperationName = "ListWebhooks"
 	NotifyPeeringAcceptedOperation OperationName = "NotifyPeeringAccepted"
 	OpenThreadOperation            OperationName = "OpenThread"
 	RemovePeerOperation            OperationName = "RemovePeer"
 	RequestPeeringOperation        OperationName = "RequestPeering"
+	RetryWebhookDeliveryOperation  OperationName = "RetryWebhookDelivery"
+	UpdateWebhookOperation         OperationName = "UpdateWebhook"
 )
